# saarthi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backend/: config.py  main.py  mdns.py  runtime_config.py  text_utils.py
backend/agent/: agent_loop.py  assembler.py  context_registry.py  current_value.py  document_extract.py  durability.py  intent_map.py  llm_provider.py  memory_updater.py  onboarding_persist.py  pipeline.py  provenance.py  sessions.py  transcripts.py  writers.py
backend/agent/tools/: dispatch.py  recall_conversation.py  specs.py
brag-output/: brag-plan.md  composition-brief.md  share-copy.txt
brag-output/composition/: index.html  meta.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Chat.jsx  SettingsSheet.jsx
frontend/src/hooks/: useChat.js
frontend/src/lib/: api.js
frontend/src/onboarding/phases/check/: FinalNoteScreen.jsx
frontend/src/store/: chatStore.js  onboardingStore.js
memory/members/father/: conversations.md  profile.md
memory/members/vedant/: conversations.md  profile.md
scripts/: advertise.py
skills/: core_system.md
tests/: conftest.py  test_advertise.py  test_agent_loop.py  test_assembler_bounded_conversations.py  test_assembler_minimal.py  test_classifier.py  test_current_value.py  test_document_endpoint.py  test_document_extract.py  test_durability.py  test_intent_map.py  test_mdns.py  test_memory_updater.py  test_pipeline_quote_reply.py  test_recall_conversation.py  test_summarizer_dates.py  test_text_utils.py  test_writers.py
(+4 files in other folders)
